--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-slick": "^0.24.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.3.2",
