--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
+    "bulma-checkradio": "^1.1.1",
     "next": "^9.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
