--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
-    "next": "^9.0.0",
+    "next": "^9.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-slick": "^0.24.0",
+    "react-sticky": "^6.0.3",
+    "react-stickynode": "^2.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "slick-carousel": "^1.8.1",
