--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
+    "lightbox-react": "^0.3.7",
     "next": "^9.0.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
