--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lightbox-react": "^0.3.7",
     "next": "^9.0.3",
     "react": "^16.8.6",
+    "react-date-picker": "^7.8.1",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-slick": "^0.24.0",
+    "react-time-picker": "^3.7.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "slick-carousel": "^1.8.1",
