--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "@crossfield/react-read-more": "^0.2.0",
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
