--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "@crossfield/react-read-more": "^0.2.0",
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
@@ -16,6 +15,7 @@
     "react-date-picker": "^7.8.1",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-read-more-less": "^0.1.6",
     "react-slick": "^0.24.0",
     "react-time-picker": "^3.7.1",
     "semantic-ui-css": "^2.4.1",
