--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-read-more-less": "^0.1.6",
+    "react-redux": "^7.1.1",
     "react-slick": "^0.24.0",
     "react-time-picker": "^3.7.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
