--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sw-precache-webpack-plugin": "^0.11.5"
   },
   "devDependencies": {
-    "babel-plugin-react-html-attrs": "^2.1.0"
+    "babel-plugin-react-html-attrs": "^2.1.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
