--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
+    "halogenium": "^2.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "lightbox-react": "^0.3.7",
     "moment-timezone": "^0.5.26",
