--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
     "bulma-checkradio": "^1.1.1",
+    "express": "^4.17.1",
     "halogenium": "^2.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "lightbox-react": "^0.3.7",
     "moment-timezone": "^0.5.26",
-    "next": "^9.0.3",
+    "next": "^9.0.5",
     "next-redux-wrapper": "^3.0.0",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-date-picker": "^7.8.1",
     "react-dates": "^20.3.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-google-maps": "^9.4.5",
     "react-read-more-less": "^0.1.6",
     "react-redux": "^7.1.1",
