--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "type": "git",
     "url": "https://github.com/sushantlp/Ballyhoo-ReVamp.git"
   },
-
- 
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "bulma": "^0.7.5",
@@ -21,7 +19,9 @@
     "lightbox-react": "^0.3.7",
     "moment-timezone": "^0.5.26",
     "next": "^9.0.5",
+    "next-offline": "^4.0.5",
     "next-redux-wrapper": "^3.0.0",
+    "path": "^0.12.7",
     "react": "^16.9.0",
     "react-date-picker": "^7.8.1",
     "react-dates": "^20.3.0",
@@ -36,8 +36,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.3.2",
-    "sw-precache-webpack-plugin": "^0.11.5"
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "babel-plugin-react-html-attrs": "^2.1.0",
