--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "halogenium": "^2.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "lightbox-react": "^0.3.7",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "next": "^9.0.5",
