Detail cart date and time ui change

--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
-    "next": "^9.0.5",
+    "next": "^9.0.7",
     "next-offline": "^4.0.5",
     "next-redux-wrapper": "^3.0.0",
     "path": "^0.12.7",
-    "react": "^16.9.0",
-    "react-date-picker": "^7.8.1",
+    "react": "^16.10.1",
+    "react-date-picker": "^7.8.2",
     "react-dates": "^20.3.0",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.10.1",
     "react-google-maps": "^9.4.5",
     "react-read-more-less": "^0.1.6",
     "react-redux": "^7.1.1",
     "react-slick": "^0.24.0",
     "react-text-more-less": "^0.4.0",
-    "react-time-picker": "^3.7.1",
+    "react-time-picker": "^3.7.2",
+    "react-times": "^3.1.12",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "babel-plugin-react-html-attrs": "^2.1.0",
