--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-next-example-app",
+  "name": "Ballyhoo Today",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
