--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ballyhoo Today",
+  "name": "ballyhoo",
   "scripts": {
     "dev": "node BallyWeb.js",
     "build": "next build",
@@ -21,13 +21,13 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "next": "^9.0.7",
-    "next-offline": "^4.0.5",
+    "next-offline": "^4.0.6",
     "next-redux-wrapper": "^3.0.0",
     "path": "^0.12.7",
-    "react": "^16.10.1",
+    "react": "^16.10.2",
     "react-date-picker": "^7.8.2",
     "react-dates": "^20.3.0",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.10.2",
     "react-google-maps": "^9.4.5",
     "react-read-more-less": "^0.1.6",
     "react-redux": "^7.1.1",
