Working enquiry form

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dates": "^20.3.0",
     "react-dom": "^16.10.2",
     "react-google-maps": "^9.4.5",
+    "react-notifications": "^1.4.3",
     "react-read-more-less": "^0.1.6",
     "react-redux": "^7.1.1",
     "react-slick": "^0.24.0",
