--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-text-more-less": "^0.4.0",
     "react-time-picker": "^3.7.2",
     "react-times": "^3.1.12",
+    "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
