--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bulma-checkradio": "^1.1.1",
     "express": "^4.17.1",
     "halogenium": "^2.3.0",
+    "idb-keyval": "^3.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "lightbox-react": "^0.3.7",
     "lodash": "^4.17.15",
@@ -25,6 +26,7 @@
     "next-redux-wrapper": "^3.0.0",
     "path": "^0.12.7",
     "react": "^16.10.2",
+    "react-animations": "^1.0.0",
     "react-date-picker": "^7.8.2",
     "react-dates": "^20.3.0",
     "react-dom": "^16.10.2",
